# Nezalezhnyk

./: CMakeLists.txt  LICENSE  README.md  gitignore
docs/architecture/: 001-core-principles.md  002-instruction-set-architecture.md  003-memory-architecture.md  004-opcode-space-allocation.md  005-base-instruction-set.md  006-pipeline-microarchitecture.md
include/nezalezhnyk/: alu.hpp  cpu.hpp  encoder.hpp  isa.hpp  memory.hpp  register_file.hpp
src/: alu.cpp  cpu.cpp  encoder.cpp  isa.cpp  main.cpp  memory.cpp
src/gui/: main.cpp  mainwindow.cpp  mainwindow.hpp  register_model.hpp
tests/: alu_tests.cpp  cpu_tests.cpp  memory_tests.cpp
